package S191220124.task3.src;

import S191220124.task3.src.Matrix.Position;

public interface Linable {

    public void setPosition(Position position);

    public Position getPosition();

    public int getValue();

}
